results/securify2/access_control_incorrect_constructor_name2.error.txt
WARNING: The requested image's platform (linux/amd64) does not match the detected host platform (linux/arm64/v8) and no specific platform was requested
Traceback (most recent call last):
  File "securify/__main__.py", line 286, in <module>
    main()
  File "securify/__main__.py", line 277, in main
    matches.extend(pattern.find_matches())
  File "/sec/securify/analyses/patterns/ast/assembly_usage_pattern.py", line 18, in find_matches
    ast_root = self.get_ast_root()
  File "/sec/securify/analyses/patterns/ast/abstract_ast_pattern.py", line 18, in get_ast_root
    ast_root = self.analysis_context.ast
  File "/sec/securify/analyses/analysis.py", line 74, in ast
    self._ast = self.config.ast_compiler(self)
  File "securify/__main__.py", line 253, in <lambda>
    ast_compiler=lambda t: solidity_ast_compiler.compile_ast(t.source_file),
  File "/sec/securify/solidity/solidity_ast_compiler.py", line 31, in compile_ast
    compile_output = compile_standard(compile_input, allow_paths='/')
  File "/usr/local/lib/python3.7/dist-packages/py_solc-3.2.0-py3.7.egg/solc/main.py", line 181, in compile_standard
    message=error_message,
solc.exceptions.SolcError: fixed_pragma.sol:24:5: SyntaxError: No visibility specified. Did you intend to add "external"?
    function () payable {}
    ^--------------------^

fixed_pragma.sol:24:5: TypeError: Fallback function must be defined as "external".
    function () payable {}
    ^--------------------^

fixed_pragma.sol:30:23: TypeError: Member "balance" not found or not visible after argument-dependent lookup in contract Missing. Use "address(this).balance" to access this address member.
       owner.transfer(this.balance);
                      ^----------^

        > command: `solc --allow-paths / --standard-json`
        > return code: `0`
        > stderr:
        {"errors":[{"component":"general","formattedMessage":"fixed_pragma.sol:24:5: SyntaxError: No visibility specified. Did you intend to add \"external\"?\n    function () payable {}\n    ^--------------------^\n","message":"No visibility specified. Did you intend to add \"external\"?","severity":"error","sourceLocation":{"end":459,"file":"fixed_pragma.sol","start":437},"type":"SyntaxError"},{"component":"general","formattedMessage":"fixed_pragma.sol:24:5: TypeError: Fallback function must be defined as \"external\".\n    function () payable {}\n    ^--------------------^\n","message":"Fallback function must be defined as \"external\".","severity":"error","sourceLocation":{"end":459,"file":"fixed_pragma.sol","start":437},"type":"TypeError"},{"component":"general","formattedMessage":"fixed_pragma.sol:30:23: TypeError: Member \"balance\" not found or not visible after argument-dependent lookup in contract Missing. Use \"address(this).balance\" to access this address member.\n       owner.transfer(this.balance);\n                      ^----------^\n","message":"Member \"balance\" not found or not visible after argument-dependent lookup in contract Missing. Use \"address(this).balance\" to access this address member.","severity":"error","sourceLocation":{"end":558,"file":"fixed_pragma.sol","start":546},"type":"TypeError"}],"sources":{}}

        > stdout:
